Updated Tests for the DAO layer